--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">SpaceTrader</string>
     <string name="action_settings">Settings</string>
+    <string name="player_name">Name:</string>
+    <string name="input_name">Enter name</string>
+    <string name="difficulty_label">Set Difficulty</string>
+    <string name="plus">+</string>
+    <string name="minus">-</string>
 </resources>
