made submit button and difficulty spinner values show up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="difficulty_label">Set Difficulty</string>
     <string name="plus">+</string>
     <string name="minus">-</string>
+    <string name="submit">Submit</string>
 </resources>
