police xml basic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,19 @@
     <string name="plus">+</string>
     <string name="minus">-</string>
     <string name="submit">Submit</string>
+
+    <!--For police xml-->
+
+    <string name="police_warning">\nYOU HAVE BEEN STOPPED BY THE POLICE!
+                                \n Select an option below.</string>
+    <string name="police_directions">
+            \nIf you accept a cargo check, you must give up any illegal goods and pay a fine.
+            \n\nIf you bribe, you must fork over 5% of your total credits.
+            \n\nIf you flee, you will be deemed unlawful and will be stopped more often
+            \n</string>
+    <string name="accept">Accept Cargo Check</string>
+    <string name="bribe">Bribe</string>
+    <string name="flee">Flee!</string>
+
+
 </resources>
