sounds, language extra credit

--- a/app/src/main/res/values-es-rUS/strings.xml
+++ b/app/src/main/res/values-es-rUS/strings.xml
@@ -5,13 +5,13 @@
     <string name="price">Precio</string>
     <string name="quantity">Cantidad</string>
     <string name="quantity_to_buy">"Cantidad para comprar "</string>
-    <string name="ship_name_label">Nombre de la Nave</string>
+    <string name="ship_name_label">"Nombre de la Nave: "</string>
     <string name="submit">Entregar</string>
     <string name="surrender">El acto de entrega</string>
-    <string name="total_price">El costo total</string>
+    <string name="total_price">"El costo total: "</string>
     <string name="market_item">Artículo de Mercado</string>
     <string name="input_name">Ingrese su nombre</string>
-    <string name="fueltanklabel">Depósito de Combustible</string>
+    <string name="fueltanklabel">Depósito de Carburante</string>
     <string name="flee">¡Huir!</string>
     <string name="fight">¡Pelear!</string>
     <string name="bribe">Sobornar</string>
@@ -21,4 +21,24 @@
     <string name="accept">Aceptar Inspección de Carga</string>
     <string name="difficulty_label">Poner la dificultad</string>
     <string name="go">Ir</string>
+    <string name="current_fuel">Carburante Actual</string>
+    <string name="max_ship_fuel">Máximo Carburante</string>
+    <string name="fuel_to_buy">Carburante para Comprar</string>
+    <string name="travel">Viajar</string>
+    <string name="cargo">Carga</string>
+    <string name="market">Mercado</string>
+    <string name="refuel">Reabastecerse</string>
+    <string name="name">Nombre</string>
+    <string name="remaining_cargo">Carga Restante:</string>
+    <string name="set_skillpoints">Poner los Puntos de Habilidad</string>
+    <string name="pilot">Piloto</string>
+    <string name="fighter">Luchador</string>
+    <string name="trader">Comerciante</string>
+    <string name="engineer">Ingeniero</string>
+    <string name="planet_map">Mapa del Planetas</string>
+    <string name="solar_system_map">Mapa del Sistema Solar</string>
+    <string name="current_coordinates">Coordenadas Actual</string>
+    <string name="travel_here">¡Viajar aquí!</string>
+    <string name="new_game">Juego Nuevo</string>
+    <string name="load_game">Cargar Juego</string>
 </resources>
